fixing align

--- a/app/assets/stylesheets/investors.scss
+++ b/app/assets/stylesheets/investors.scss
@@ -7,8 +7,10 @@
     padding:0px;
     margin:0px;
     color: #1c1c1c;
-    margin-top: 60px;
     
+    .investor_link{
+        margin-top: 60px;
+    }
     .investor_link, .investors_link a{
         font-size: 15px;
         margin-bottom: 20px;
